{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 31,
  "lineage": "77ccdde9-2ca5-38a8-6f3c-2c2109c54bd3",
  "resources": [
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933266008110:loadbalancer/app/cc-demo-app-alb/0c8b64e6d9ebcaa1",
            "arn_suffix": "app/cc-demo-app-alb/0c8b64e6d9ebcaa1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cc-demo-app-alb-1003961555.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:933266008110:loadbalancer/app/cc-demo-app-alb/0c8b64e6d9ebcaa1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cc-demo-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ba75e555e0329dc1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02deafd6c8a487b32"
              },
              {
                "subnet_id": "subnet-04826821962cd1a5f"
              },
              {
                "subnet_id": "subnet-0b2f389c529189f03"
              }
            ],
            "subnets": [
              "subnet-02deafd6c8a487b32",
              "subnet-04826821962cd1a5f",
              "subnet-0b2f389c529189f03"
            ],
            "vpc_id": "vpc-0056d3ec60b296bbf",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.ecsCluster.aws_default_subnet.default_subnet_a",
            "module.ecsCluster.aws_default_subnet.default_subnet_b",
            "module.ecsCluster.aws_default_subnet.default_subnet_c",
            "module.ecsCluster.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933266008110:subnet/subnet-02deafd6c8a487b32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-02deafd6c8a487b32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "933266008110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0056d3ec60b296bbf"
          }
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933266008110:subnet/subnet-04826821962cd1a5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-04826821962cd1a5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "933266008110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0056d3ec60b296bbf"
          }
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933266008110:subnet/subnet-0b2f389c529189f03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0b2f389c529189f03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "933266008110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0056d3ec60b296bbf"
          }
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933266008110:vpc/vpc-0056d3ec60b296bbf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0901ada351f08c312",
            "default_route_table_id": "rtb-00b4c0b0d4eacb227",
            "default_security_group_id": "sg-0cb96d4d0f6295ab8",
            "dhcp_options_id": "dopt-010297e968008abad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0056d3ec60b296bbf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b4c0b0d4eacb227",
            "owner_id": "933266008110"
          }
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933266008110:listener/app/cc-demo-app-alb/0c8b64e6d9ebcaa1/829683721f6f4e85",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933266008110:targetgroup/cc-demo-alb-tg/4796cdb92cf81dbe",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:933266008110:listener/app/cc-demo-app-alb/0c8b64e6d9ebcaa1/829683721f6f4e85",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933266008110:loadbalancer/app/cc-demo-app-alb/0c8b64e6d9ebcaa1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecsCluster.aws_alb.application_load_balancer",
            "module.ecsCluster.aws_default_subnet.default_subnet_a",
            "module.ecsCluster.aws_default_subnet.default_subnet_b",
            "module.ecsCluster.aws_default_subnet.default_subnet_c",
            "module.ecsCluster.aws_default_vpc.default_vpc",
            "module.ecsCluster.aws_lb_target_group.target_group",
            "module.ecsCluster.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:933266008110:targetgroup/cc-demo-alb-tg/4796cdb92cf81dbe",
            "arn_suffix": "targetgroup/cc-demo-alb-tg/4796cdb92cf81dbe",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:933266008110:targetgroup/cc-demo-alb-tg/4796cdb92cf81dbe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cc-demo-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0056d3ec60b296bbf"
          },
          "dependencies": [
            "module.ecsCluster.aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933266008110:security-group/sg-0ba75e555e0329dc1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba75e555e0329dc1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241126082420258000000001",
            "name_prefix": "terraform-",
            "owner_id": "933266008110",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0056d3ec60b296bbf"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ecsCluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:933266008110:security-group/sg-009d45944684d2481",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009d45944684d2481",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0ba75e555e0329dc1"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20241126082424749800000002",
            "name_prefix": "terraform-",
            "owner_id": "933266008110",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0056d3ec60b296bbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecsCluster.aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}